plugins {
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    implementation 'com.discord4j:discord4j-core:3.1.3'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.1'
    implementation 'org.apache.commons:commons-lang3:3.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.mockito:mockito-core:4.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
    testImplementation 'io.projectreactor:reactor-test:3.4.2'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

apply plugin: 'com.github.johnrengelman.shadow'

test {
    useJUnitPlatform()
}

application {
    mainClass = 'lequentin.cocobot.CocoApplicationMain'
}

task('synchronise', dependsOn: 'classes', type: JavaExec) {
    mainClass = 'lequentin.cocobot.SynchroniseStorageApplicationMain'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
}
